--- a/src/.env
+++ b/src/.env
@@ -3,6 +3,7 @@ APP_ENV=local
 APP_KEY=base64:o7i/ZVWVlp107vfolW7Mbxiu/mXXFjoPSnzrNjt0vBw=
 APP_DEBUG=true
 APP_URL=http://localhost:8000
+EXTERNAL_API_URL=http://35.209.141.153:80
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
