Add volumes for storage

--- a/deployment/docker-compose.yaml
+++ b/deployment/docker-compose.yaml
@@ -16,6 +16,8 @@ services:
     restart: always
     volumes:
       - ${APP_CONFIG}:/opt/easycar/.env
+      - ${APP_STORAGE}:/opt/easycar/storage
+      - ${APP_PUBLIC}:/opt/easycar/public
     depends_on:
       - easycar_mysql
   easycar_mysql:
